Author: tv
Build-Type: Simple
Cabal-Version: >= 1.2
Copyright: 2015 Zalora
License: BSD3
Maintainer: tv@zalora.com
Name: ares
Version: 0

Executable ares
  Build-Depends:
    aeson,
    attoparsec,
    base,
    bytestring,
    containers,
    directory,
    extra,
    filelock,
    filepath,
    network,
    process,
    servant-server,
    temporary,
    text,
    transformers,
    Unique,
    unix,
    wai,
    wai-extra,
    warp
  GHC-Options: -Wall -threaded -rtsopts -with-rtsopts=-N
  Hs-Source-Dirs: src
  Main-Is: ares.hs
