Author: Tomislav Viljetić
Bug-Reports: https://github.com/zalora/ares/issues
Build-Type: Simple
Cabal-Version: >= 1.2
Copyright: 2015 Zalora South East Asia Pte Ltd
Homepage: https://github.com/zalora/ares
License-File: LICENSE
License: MIT
Maintainer: tv@zalora.com
Name: ares
Version: 0

Executable ares
  Build-Depends:
    aeson,
    attoparsec,
    base,
    bytestring,
    containers,
    directory,
    extra,
    filelock,
    filepath,
    network,
    process,
    servant-server,
    temporary,
    text,
    transformers,
    Unique,
    unix,
    wai,
    wai-extra,
    warp
  GHC-Options: -Wall -threaded -rtsopts -with-rtsopts=-N
  Hs-Source-Dirs: src
  Main-Is: ares.hs
